force-app/main/default/objects/animalos__Job__c/animalos__Job__c.object-meta.xml
<CustomObject>
    <label>Job</label>
    <nameField>
        <label>Job ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>