force-app/main/default/objects/animalos__Job__c/fields/Abandoned_Formula__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Abandoned&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abandoned Formula</label>
    <type>Checkbox</type>
</CustomField>