force-app/main/default/objects/animalos__Job__c/fields/Address_Searchable__c.field-meta.xml
<CustomField>
    <fullName>Address_Searchable__c</fullName>
    <label>Address Searchable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>