force-app/main/default/objects/animalos__Job__c/fields/Animal_Unattended_Formula__c.field-meta.xml
<CustomField>
    <fullName>Animal_Unattended_Formula__c</fullName>
    <formula>INCLUDES(animalos__Codes__c,&apos;Animal Unattended&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Unattended Formula</label>
    <type>Checkbox</type>
</CustomField>