force-app/main/default/objects/animalos__Job__c/fields/animalos__Address_Apple_Maps_Link__c.field-meta.xml
<CustomField>
    <fullName>animalos__Address_Apple_Maps_Link__c</fullName>
    <formula>HYPERLINK(&apos;https://maps.apple.com/?q=&apos; + animalos__Full_Address__c, animalos__Full_Address__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Apple Maps Link</label>
    <type>Text</type>
</CustomField>