force-app/main/default/objects/animalos__Job__c/fields/animalos__Address_Google_Maps_Link__c.field-meta.xml
<CustomField>
    <fullName>animalos__Address_Google_Maps_Link__c</fullName>
    <formula>HYPERLINK(&apos;https://www.google.com/maps/search/?api=1&amp;query=&apos; + animalos__Full_Address__c, animalos__Full_Address__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Google Maps Link</label>
    <type>Text</type>
</CustomField>