force-app/main/default/objects/animalos__Job__c/fields/animalos__Advisory__c.field-meta.xml
<CustomField>
    <fullName>animalos__Advisory__c</fullName>
    <formula>IF(
OR(animalos__Observed_Physical_Violence__c, animalos__Observed_Verbal_Abuse__c, animalos__Observed_Firearms_Weapons__c, animalos__Observed_Substance_Abuse__c, animalos__Observed_Known_to_Police__c),
IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__indicatorIcons/red.png&quot;,&quot;RED&quot;, 16, 32),
IF(
OR(animalos__Reported_Physical_Violence__c, animalos__Reported_Verbal_Abuse__c, animalos__Reported_Firearms_Weapons__c, animalos__Reported_Substance_Abuse__c, animalos__Reported_Known_to_Police__c),
IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__indicatorIcons/yellow.png&quot;,&quot;YELLOW&quot;, 16, 32),
IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__indicatorIcons/default.png&quot;,&quot;DEFAULT&quot;, 16, 32)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advisory</label>
    <type>Text</type>
</CustomField>