force-app/main/default/objects/animalos__Job__c/fields/animalos__Animal_Report_Summary__c.field-meta.xml
<CustomField>
    <fullName>animalos__Animal_Report_Summary__c</fullName>
    <label>Animal Report Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>