force-app/main/default/objects/animalos__Job__c/fields/animalos__Codes__c.field-meta.xml
<CustomField>
    <fullName>animalos__Codes__c</fullName>
    <label>Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Advertisement of an Animal</fullName>
            </value>
            <value>
                <fullName>AH Owner Medical Assist</fullName>
            </value>
            <value>
                <fullName>Animal fighting/Prohibited event</fullName>
            </value>
            <value>
                <fullName>Animal in hot vehicle</fullName>
            </value>
            <value>
                <fullName>Animal Unattended</fullName>
            </value>
            <value>
                <fullName>Assistance Request - Animal Owner</fullName>
            </value>
            <value>
                <fullName>Assistance Request - HEA Bequest</fullName>
            </value>
            <value>
                <fullName>Assistance Request - Inspectorate</fullName>
            </value>
            <value>
                <fullName>Assistance Request - Provide Emergency Relief</fullName>
            </value>
            <value>
                <fullName>Assistance Request - Shelter</fullName>
            </value>
            <value>
                <fullName>Baiting</fullName>
            </value>
            <value>
                <fullName>Cause Captive Animal To Be Injured/killed By Dog</fullName>
            </value>
            <value>
                <fullName>Cruelty</fullName>
            </value>
            <value>
                <fullName>Dog/Cat Attack</fullName>
                <label>Dog/cat Attack</label>
            </value>
            <value>
                <fullName>Emergency - Fire Event</fullName>
            </value>
            <value>
                <fullName>Emergency - Flood Event</fullName>
            </value>
            <value>
                <fullName>Emergency - Heat Related</fullName>
            </value>
            <value>
                <fullName>Emergency - Oiled Wildlife</fullName>
            </value>
            <value>
                <fullName>Emergency Relief</fullName>
            </value>
            <value>
                <fullName>Entanglement - Fishing Line</fullName>
            </value>
            <value>
                <fullName>Entanglement - Other</fullName>
            </value>
            <value>
                <fullName>Flighted Bird</fullName>
            </value>
            <value>
                <fullName>Food &amp; Water</fullName>
            </value>
            <value>
                <fullName>Greyhound Complaint</fullName>
            </value>
            <value>
                <fullName>HEA Bequest Assistance Request</fullName>
            </value>
            <value>
                <fullName>Heat Distress</fullName>
            </value>
            <value>
                <fullName>Heat Related</fullName>
            </value>
            <value>
                <fullName>Hit By Car</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>