force-app/main/default/objects/animalos__Job__c/fields/animalos__Country__c.field-meta.xml
<CustomField>
    <fullName>animalos__Country__c</fullName>
    <label>Country</label>
    <type>TextArea</type>
</CustomField>