force-app/main/default/objects/animalos__Job__c/fields/animalos__Description__c.field-meta.xml
<CustomField>
    <fullName>animalos__Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>