force-app/main/default/objects/animalos__Job__c/fields/animalos__Finalised_Date__c.field-meta.xml
<CustomField>
    <fullName>animalos__Finalised_Date__c</fullName>
    <label>Finalised Date</label>
    <type>DateTime</type>
</CustomField>