force-app/main/default/objects/animalos__Job__c/fields/animalos__Full_Address__c.field-meta.xml
<CustomField>
    <fullName>animalos__Full_Address__c</fullName>
    <formula>IF( NOT(ISBLANK(animalos__Address__Street__s)), animalos__Address__Street__s &amp; &apos;, &apos;, &apos;&apos;) &amp; animalos__Address__City__s &amp; &apos;, &apos; &amp; TEXT(animalos__Address__StateCode__s) &amp; &apos; &apos; &amp; animalos__Address__PostalCode__s &amp; &apos; &apos; &amp; TEXT(animalos__Address__CountryCode__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>