force-app/main/default/objects/animalos__Job__c/fields/animalos__Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>animalos__Is_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>