force-app/main/default/objects/animalos__Job__c/fields/animalos__Job_Age__c.field-meta.xml
<CustomField>
    <fullName>animalos__Job_Age__c</fullName>
    <formula>IF(animalos__Is_Closed__c,animalos__Finalised_Date__c - CreatedDate,NOW() - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>