force-app/main/default/objects/animalos__Job__c/fields/animalos__Job_Bundle__c.field-meta.xml
<CustomField>
    <fullName>animalos__Job_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Bundle</label>
    <referenceTo>animalos__Job_Bundle__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>