force-app/main/default/objects/animalos__Job__c/fields/animalos__Job_Categorisation__c.field-meta.xml
<CustomField>
    <fullName>animalos__Job_Categorisation__c</fullName>
    <label>Job Categorisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient Food and Water</fullName>
            </value>
            <value>
                <fullName>Insufficient Shelter</fullName>
            </value>
            <value>
                <fullName>Ill-treatment (direct physical abuse)</fullName>
            </value>
            <value>
                <fullName>Tied continuously or locked in a small pen/cage</fullName>
            </value>
            <value>
                <fullName>Breeder or Pet Shop Inspection</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Abandonment</fullName>
            </value>
            <value>
                <fullName>Vet treatment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>