force-app/main/default/objects/animalos__Job__c/fields/animalos__Job_Length__c.field-meta.xml
<CustomField>
    <fullName>animalos__Job_Length__c</fullName>
    <formula>(animalos__Finalised_Date__c - animalos__Start_Date__c) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>