force-app/main/default/objects/animalos__Job__c/fields/animalos__Job_Outcome__c.field-meta.xml
<CustomField>
    <fullName>animalos__Job_Outcome__c</fullName>
    <label>Job Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>animalos__Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ambulance</fullName>
            </value>
            <value>
                <fullName>Animal Welfare League</fullName>
            </value>
            <value>
                <fullName>Formal Caution</fullName>
            </value>
            <value>
                <fullName>Intel Only</fullName>
            </value>
            <value>
                <fullName>No Further Action</fullName>
            </value>
            <value>
                <fullName>Other Agency</fullName>
            </value>
            <value>
                <fullName>Penalty Infringement Notice</fullName>
            </value>
            <value>
                <fullName>Police</fullName>
            </value>
            <value>
                <fullName>Prosecution/CAN</fullName>
            </value>
            <value>
                <fullName>Advisory letter issued</fullName>
            </value>
            <value>
                <fullName>Animals Seized</fullName>
            </value>
            <value>
                <fullName>Animals Surrendered</fullName>
            </value>
            <value>
                <fullName>Attended – advice provided</fullName>
            </value>
            <value>
                <fullName>Attended - Treatment obtained</fullName>
            </value>
            <value>
                <fullName>AWD – Compliance obtained</fullName>
            </value>
            <value>
                <fullName>AWD – No compliance obtained</fullName>
            </value>
            <value>
                <fullName>Duplicate job</fullName>
            </value>
            <value>
                <fullName>Emergency relief provided</fullName>
            </value>
            <value>
                <fullName>Forfeiture application not approved</fullName>
            </value>
            <value>
                <fullName>Forfeiture approved</fullName>
            </value>
            <value>
                <fullName>Insufficient evidence to continue investigation</fullName>
            </value>
            <value>
                <fullName>Insufficient evidence to open investigation</fullName>
            </value>
            <value>
                <fullName>Insufficient powers to Obtain Information</fullName>
            </value>
            <value>
                <fullName>No ACPA offence</fullName>
            </value>
            <value>
                <fullName>No Attendance – advice provided</fullName>
            </value>
            <value>
                <fullName>No attendance – treatment provided</fullName>
            </value>
            <value>
                <fullName>No welfare issue</fullName>
            </value>
            <value>
                <fullName>Pending FBOE</fullName>
            </value>
            <value>
                <fullName>Pending forfeiture</fullName>
            </value>
            <value>
                <fullName>Prosecution commenced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>