force-app/main/default/objects/animalos__Job__c/fields/animalos__Knowledge_of_firearms_weapons__c.field-meta.xml
<CustomField>
    <fullName>animalos__Knowledge_of_firearms_weapons__c</fullName>
    <label>Knowledge of firearms/weapons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>