force-app/main/default/objects/animalos__Job__c/fields/animalos__Last_Observed_Verbal_Abuse__c.field-meta.xml
<CustomField>
    <fullName>animalos__Last_Observed_Verbal_Abuse__c</fullName>
    <label>Last Observed Verbal Abuse</label>
    <type>DateTime</type>
</CustomField>