force-app/main/default/objects/animalos__Job__c/fields/animalos__Last_Reported_Known_to_Police__c.field-meta.xml
<CustomField>
    <fullName>animalos__Last_Reported_Known_to_Police__c</fullName>
    <label>Last Reported Known to Police</label>
    <type>DateTime</type>
</CustomField>