force-app/main/default/objects/animalos__Job__c/fields/animalos__Last_Reported_Physical_Violence__c.field-meta.xml
<CustomField>
    <fullName>animalos__Last_Reported_Physical_Violence__c</fullName>
    <label>Last Reported Physical Violence</label>
    <type>DateTime</type>
</CustomField>