force-app/main/default/objects/animalos__Job__c/fields/animalos__Latest_Recheck_Date__c.field-meta.xml
<CustomField>
    <fullName>animalos__Latest_Recheck_Date__c</fullName>
    <label>Latest Recheck Date</label>
    <summarizedField>animalos__Job_Activity__c.animalos__Recheck__c</summarizedField>
    <summaryFilterItems>
        <field>animalos__Job_Activity__c.animalos__Recheck__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>animalos__Job_Activity__c.animalos__Job__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>