force-app/main/default/objects/animalos__Job__c/fields/animalos__Location_Of_Interest__c.field-meta.xml
<CustomField>
    <fullName>animalos__Location_Of_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Of Interest</label>
    <referenceTo>animalos__Location_Of_Interest__c</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>