force-app/main/default/objects/animalos__Job__c/fields/animalos__Name_Number__c.field-meta.xml
<CustomField>
    <fullName>animalos__Name_Number__c</fullName>
    <formula>VALUE(Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>