force-app/main/default/objects/animalos__Job__c/fields/animalos__Name_Searchable__c.field-meta.xml
<CustomField>
    <fullName>animalos__Name_Searchable__c</fullName>
    <label>Name Searchable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>