force-app/main/default/objects/animalos__Job__c/fields/animalos__Number_of_Reported_Substance_Abuse__c.field-meta.xml
<CustomField>
    <fullName>animalos__Number_of_Reported_Substance_Abuse__c</fullName>
    <label>Number of Reported Substance Abuse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>