force-app/main/default/objects/animalos__Job__c/fields/animalos__Observed_Firearms_Weapons__c.field-meta.xml
<CustomField>
    <fullName>animalos__Observed_Firearms_Weapons__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Observed Firearms/Weapons</label>
    <type>Checkbox</type>
</CustomField>