force-app/main/default/objects/animalos__Job__c/fields/animalos__Observed_Physical_Violence__c.field-meta.xml
<CustomField>
    <fullName>animalos__Observed_Physical_Violence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Observed Physical Violence</label>
    <type>Checkbox</type>
</CustomField>