force-app/main/default/objects/animalos__Job__c/fields/animalos__Outcome_Notes__c.field-meta.xml
<CustomField>
    <fullName>animalos__Outcome_Notes__c</fullName>
    <label>Outcome Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>