force-app/main/default/objects/animalos__Job__c/fields/animalos__Parent_Job__c.field-meta.xml
<CustomField>
    <fullName>animalos__Parent_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Job</label>
    <referenceTo>animalos__Job__c</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>