force-app/main/default/objects/animalos__Job__c/fields/animalos__Phone__c.field-meta.xml
<CustomField>
    <fullName>animalos__Phone__c</fullName>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>