force-app/main/default/objects/animalos__Job__c/fields/animalos__Priority__c.field-meta.xml
<CustomField>
    <fullName>animalos__Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>No Incident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>