force-app/main/default/objects/animalos__Job__c/fields/animalos__Proactive_Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Proactive_Type__c</fullName>
    <label>Proactive Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pet Shops</fullName>
            </value>
            <value>
                <fullName>Breeding Facility - Dogs and Cats</fullName>
            </value>
            <value>
                <fullName>Boarding Establishments – Dogs and Cats</fullName>
            </value>
            <value>
                <fullName>Security Dogs</fullName>
            </value>
            <value>
                <fullName>Companion Animal Transport Agencies</fullName>
            </value>
            <value>
                <fullName>Animals in Grooming Establishments</fullName>
            </value>
            <value>
                <fullName>Animals in Film and Theatrical Performances</fullName>
            </value>
            <value>
                <fullName>Animals used in Rodeo Events</fullName>
            </value>
            <value>
                <fullName>Horses in Riding Centres and Boarding Stables</fullName>
            </value>
            <value>
                <fullName>Companion Animal Pounds</fullName>
            </value>
            <value>
                <fullName>Agricultural Shows</fullName>
            </value>
            <value>
                <fullName>Feedlots</fullName>
            </value>
            <value>
                <fullName>Zoo</fullName>
            </value>
            <value>
                <fullName>Commercial Production – Chickens, Pigs, Livestock</fullName>
            </value>
            <value>
                <fullName>Community Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>