force-app/main/default/objects/animalos__Job__c/fields/animalos__Proactively_Logged_By__c.field-meta.xml
<CustomField>
    <fullName>animalos__Proactively_Logged_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proactively Logged By</label>
    <referenceTo>animalos__Resource__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>