force-app/main/default/objects/animalos__Job__c/fields/animalos__Property_Directions__c.field-meta.xml
<CustomField>
    <fullName>animalos__Property_Directions__c</fullName>
    <label>Property Directions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>