force-app/main/default/objects/animalos__Job__c/fields/animalos__Referred_To__c.field-meta.xml
<CustomField>
    <fullName>animalos__Referred_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred To</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>