force-app/main/default/objects/animalos__Job__c/fields/animalos__Regulatory_Action__c.field-meta.xml
<CustomField>
    <fullName>animalos__Regulatory_Action__c</fullName>
    <label>Regulatory Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>